<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_and_register"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical" 
        android:layout_weight="1">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tab_reg_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:text="@string/text_username" />

                <EditText
                    android:id="@+id/edt_reg_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/input_username"
                    android:layout_weight="1"
                    android:textSize="15sp" >
					<requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tab_reg_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3sp" >
				
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:text="@string/text_password" />
                <EditText
			         android:id="@+id/edt_reg_password"
			         android:gravity="center"
			         android:layout_width="0dp"
			         android:layout_height="wrap_content"
			         android:layout_weight="1"
			         android:hint="@string/input_password"
			         android:layout_centerVertical="true"
			         android:background="@drawable/rounded_edittext"
			         android:inputType="textPassword"
			         android:textSize="15sp">
                	<requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tab_reg_phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3sp" >
                <TextView
					android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/text_phonenumber" />
                <EditText
			         android:id="@+id/edt_reg_phonenumber"
			         android:gravity="center"
			         android:layout_width="0dp"
			         android:layout_height="wrap_content"
			         android:hint="@string/input_phonenumber"
			         android:layout_centerVertical="true"
			         android:background="@drawable/rounded_edittext"
			         android:layout_weight="1"
			         android:textSize="15sp"/>
            </TableRow>
        </TableLayout>
        <Button 
		    android:id="@+id/btn_reg_register"
		    android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/register"
	        android:textColor="@color/white"
	        android:layout_marginTop="10sp"
	        android:textSize="20sp"
	        android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</LinearLayout>