<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_and_register"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical" 
        android:layout_weight="1">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_table">

            <TableRow
                android:id="@+id/tab_log_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/text_username"
                    android:gravity="center"
                    android:textColor="@color/grey"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edt_log_username"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/input_username"
                    android:textSize="15sp" >

                    <requestFocus />
                </EditText>

            </TableRow>

            <TableRow
                android:id="@+id/tab_log_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3sp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/text_password"
                    android:textColor="@color/grey"
                    android:gravity="center"
                    android:textSize="20sp" />
                <EditText
			         android:id="@+id/edt_log_password"
			         android:gravity="center"
			         android:layout_width="0dp"
                    android:layout_weight="1"
			         android:layout_height="wrap_content"
			         android:hint="@string/input_password"
			         android:layout_centerVertical="true"
			         android:background="@drawable/rounded_edittext"
			         android:inputType="textPassword"
			         android:textSize="15sp"/>
            </TableRow>
        </TableLayout>
        
	<Button 
	    android:id="@+id/btn_log_login"
	    android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginTop="10sp"
        android:background="@drawable/rounded_button"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>
	
    </LinearLayout>

</LinearLayout>