<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WelcomeActivity"
     android:background="@drawable/bg"
     android:orientation="vertical"
     >
	 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical" >

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="36dp"
                 android:layout_weight="0.05"
                 android:gravity="center"
                 android:text="@string/title"
                 android:textSize="30sp"
                 android:textColor="@color/black" />

             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="46dp"
                 android:layout_weight="0.01"
                 android:gravity="center"
                 android:text="@string/design"
                 android:textColor="@color/grey" />

         </LinearLayout>

     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical"
             android:gravity="center">
 
             <Button
                 android:id="@+id/btn_wel_login"
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="50dp"
                 android:background="@drawable/rounded_button"
                 android:text="@string/login"
                 android:textColor="@color/white"
                 android:textSize="20sp" />

         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical"
             android:gravity="center">
 
             <Button
                 android:id="@+id/btn_wel_register"
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="50dp"
                 android:background="@drawable/rounded_button1"
                 android:text="@string/register"
                 android:textColor="@color/white"
                 android:textSize="20sp" />

         </LinearLayout>
     </LinearLayout>
</LinearLayout>